started work on Wigner functions

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,10 +1,9 @@
-add_executable(QuadExample QuadExample.cpp)
-target_link_libraries(QuadExample
-  Eigen3::Eigen GaussQuad)
 
-add_executable(FFTWExample FFTWExample.cpp)
-target_link_libraries(FFTWExample FFTWpp)
 
 add_executable(LegendreExample LegendreExample.cpp)
 target_link_libraries(LegendreExample GSHT)
+
+
+add_executable(WignerExample WignerExample.cpp)
+target_link_libraries(WignerExample GSHT)
 
