--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,5 +4,5 @@
 
 
 add_executable(WignerExample WignerExample.cpp)
-target_link_libraries(WignerExample GSHT)
+target_link_libraries(WignerExample GSHTrans)
 
