--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,11 @@
 
-
-
-
-
 add_executable(WignerExample WignerExample.cpp)
 target_link_libraries(WignerExample GSHTrans)
+
+add_executable(FFTWExample FFTWExample.cpp)
+target_link_libraries(FFTWExample GSHTrans)
+
+
+add_executable(QuadExample QuadExample.cpp)
+target_link_libraries(QuadExample GSHTrans)
 
