--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,8 +7,8 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(TestWigner
-               TestWigner.cpp)
-target_link_libraries(TestWigner PRIVATE GSHTrans gtest_main)
+#add_executable(TestWigner
+#               TestWigner.cpp)
+#target_link_libraries(TestWigner PRIVATE GSHTrans gtest_main)
 include(GoogleTest)
-gtest_discover_tests(TestWigner)
+#gtest_discover_tests(TestWigner)
