Fast transformations implemented

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,8 +3,8 @@ add_executable(WignerExample WignerExample.cpp)
 target_link_libraries(WignerExample GSHTrans)
 
 
-add_executable(PlanExample PlanExample.cpp)
-target_link_libraries(PlanExample GSHTrans)
+add_executable(GridExample GridExample.cpp)
+target_link_libraries(GridExample GSHTrans)
 
 
 
