--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,5 +6,8 @@ target_link_libraries(WignerExample GSHTrans)
 add_executable(GridExample GridExample.cpp)
 target_link_libraries(GridExample GSHTrans)
 
+add_executable(ScalarFieldExample ScalarFieldExample.cpp)
+target_link_libraries(ScalarFieldExample GSHTrans)
+
 
 
