work on expression templates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,8 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
         add_subdirectory(examples)
     endif()
     if(MY_PROJECT_BUILD_TESTS)
-        enable_testing()
-        add_subdirectory(tests)
+#        enable_testing()
+#        add_subdirectory(tests)
     endif()
 endif()
 
