work on new indexing classes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,7 +11,5 @@ target_link_libraries(ScalarFieldExample GSHTrans)
 
 
 
-
-
-add_executable(Views Views.cpp)
-target_link_libraries(Views GSHTrans)
+add_executable(IndexingTest IndexingTest.cpp)
+target_link_libraries(IndexingTest GSHTrans)
