--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,7 +6,7 @@ target_link_libraries(WignerExample GSHTrans)
 add_executable(GridExample GridExample.cpp)
 target_link_libraries(GridExample GSHTrans)
 
-add_executable(ScalarFieldExample ScalarFieldExample.cpp)
-target_link_libraries(ScalarFieldExample GSHTrans)
+add_executable(FieldExample FieldExample.cpp)
+target_link_libraries(FieldExample GSHTrans)
 
 
