work on coefficient classes

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -9,4 +9,7 @@ target_link_libraries(GridExample GSHTrans)
 add_executable(FieldExample FieldExample.cpp)
 target_link_libraries(FieldExample GSHTrans)
 
+add_executable(CoefficientExample CoefficientExample.cpp)
+target_link_libraries(CoefficientExample GSHTrans)
+
 
