--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,10 +6,10 @@ target_link_libraries(WignerExample GSHTrans)
 add_executable(GridExample GridExample.cpp)
 target_link_libraries(GridExample GSHTrans)
 
-add_executable(FieldExample FieldExample.cpp)
-target_link_libraries(FieldExample GSHTrans)
+#add_executable(FieldExample FieldExample.cpp)
+#target_link_libraries(FieldExample GSHTrans)
 
-add_executable(CoefficientExample CoefficientExample.cpp)
-target_link_libraries(CoefficientExample GSHTrans)
+#add_executable(CoefficientExample CoefficientExample.cpp)
+#target_link_libraries(CoefficientExample GSHTrans)
 
 
