Wigner update completed and checked!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ target_include_directories (GaussQuad INTERFACE
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     # We're in the root, define additional targets for developers.
     option(MY_PROJECT_BUILD_EXAMPLES   "whether or not examples should be built" ON)
-    option(MY_PROJECT_BUILD_TESTS      "whether or not tests should be built" OFF)
+    option(MY_PROJECT_BUILD_TESTS      "whether or not tests should be built" ON)
 
     if(MY_PROJECT_BUILD_EXAMPLES)
         add_subdirectory(examples)
